--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Photogram</h1>
+<% @posts.each do |post| %>
+  <%= image_tag post.image.url(:medium) %>
+  <%= post.caption %>
+<% end %>
 <%= link_to "New Post", new_post_path %>
