--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,11 @@
         </div>
       </div>
     </nav>
-    <% flash.each do |name, msg| %>
-    <%= content_tag :div, msg, class: [:alert, alert_for(name)] %>
-    <% end %>
-
-    <%= yield %>
+    <div class="container">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: [:alert, alert_for(name)] %>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
