--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,67 @@ body {
   background-color: #fafafa;
   font-family: proxima-nova, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
+html {
+  height: 100%;
+}
+/* ## SIGN UP CUSTOMISATIONS ## */
+.registration-bg {
+  padding-top: 4em;
+  height: 100%;
+  background-image: url(regbackg.jpg);
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.log-in{
+  margin-left: auto;
+  margin-right: auto;
+  text-align:center;
+  border: none;
+}
+
+.panel {
+  border-radius: 8px;
+}
+
+.panel-heading{
+  h1 {
+    text-align: center;
+  }
+}
+/* ## LOG IN CUSTOMISATIONS ## */
+
+.login-bg {
+  padding-top: 4em;
+  height: 100%;
+  background-image: url(loginbg.jpg);
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/* ## IMAGE UPLOAD CUSTOMISATIONS ## */
+
+#image-preview {
+  margin: 0px auto;
+}
+
+#post_image {
+  padding: 1em;
+  margin: 0px auto;
+}
+
+/* ## ALL PAGES CUSTOMISATIONS ## */
+.navbar {
+  margin-bottom: 0px;
+}
+
+.alert {
+  margin-bottom: 0px;
+}
 
 /* ## NAVBAR CUSTOMISATIONS ## */
 
